# ScholarMine

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml  platforms.yaml
config/schemas/: general_5fields.yaml  sac_15fields.yaml
src/scholar_mine/: __init__.py  cli.py
src/scholar_mine/agent/: __init__.py  config_generator.py  keyword_expander.py  monitor.py  planner.py  preview.py  prompts.py  schema_inferrer.py
src/scholar_mine/crawlers/: __init__.py  arxiv.py  base.py  crossref.py  scihub.py  semantic_scholar.py
src/scholar_mine/llm/: __init__.py  client.py
src/scholar_mine/pdf/: __init__.py  reader.py  ref_stripper.py
src/scholar_mine/pipeline/: __init__.py  orchestrator.py  stage_01_keywords.py  stage_02_crawl.py  stage_03_filter.py  stage_04_extract.py  stage_05_store.py
src/scholar_mine/store/: __init__.py  csv_aggregator.py  md_writer.py
src/scholar_mine/utils/: __init__.py  checkpoint.py  guard.py  logger.py  retry.py  validators.py
tests/: __init__.py  test_dummy.py
