[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-mine"
version = "0.1.0"
description = "Agent-Orchestrated Pipeline for academic literature mining — from keyword generation to structured extraction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "ScholarMine Team"}]
keywords = ["literature-mining", "paper-crawler", "llm-extraction", "academic-research"]

dependencies = [
    "openai>=1.0",
    "httpx>=0.28",
    "aiohttp>=3.11",
    "click>=8.1",
    "typer>=0.15",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.25",
    "tqdm>=4.67",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "watchdog>=6.0",
    "pydantic>=2.10",
    "tenacity>=9.0",
    "pandas>=2.2",
    "arxiv>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
scholarmine = "scholar_mine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]